# mezon-ips-bot

./: .dockerignore  .env.example  .env.prod  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  clean_docx.py  deploy.ps1  deploy.sh  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.yml  mezon-python-bot-instruction.md  package.ps1  package.sh  pyproject.toml  run.py
app/: main.py
app/api/v1/: __init__.py  bot.py  gold_price.py  health.py
app/core/settings/: app.py
app/database/: connect.py
app/database/migrations/: env.py
app/database/models/: __init__.py  common.py  contract.py  expert.py  gold_price.py  professional.py  program.py
app/database/repositories/: __init__.py  base.py  contract.py  expert.py  gold_price.py  professional.py  program.py
app/dependencies/: container.py
app/services/: s3_upload.py  smb_upload.py
app/services/bot/: __init__.py  form_tracker.py  handler_manager.py  service.py
app/utils/: __init__.py  formatters.py
docs/: README.md  architecture.md  commands.md  development.md  forking-guide.md  operations.md  setup.md
docs/journals/: 2026-05-09-code-review-analysis.md
template/: HUONG_DAN_UPDATE_TEMPLATE.md  Template_BBNT.docx  Template_HDCG.docx
tests/: conftest.py  test_contract_acceptance_and_uniqueness.py  test_contract_activity_duplicates.py  test_contract_filters.py  test_expert_duplicates.py  test_expert_handler_acceptance.py  test_handler_manager.py  test_list_pagination.py  test_program_code_normalization.py  test_program_repository.py  test_word_export.py
(+31 files in other folders)
