[project]
name = "mezon-ips-bot"
version = "0.1.0"
description = "Mezon Bot for IPS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.31.0",
    "boto3>=1.35.0",
    "dependency-injector>=4.48.2",
    "fastapi>=0.123.2",
    "greenlet>=3.2.4",
    "docxtpl>=0.18.0",
    "mezon-sdk>=1.8.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
